11_gcloud/.kubernetes/koujou11-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2020-01-13T02:42:51Z"
  generation: 1
  labels:
    run: koujou11-app
  name: koujou11-app
  namespace: default
  resourceVersion: "10786"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/koujou11-app
  uid: 64741a74-35ae-11ea-bca2-42010a9200ff
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: koujou11-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: koujou11-app
    spec:
      containers:
      - command:
        - bundle
        - exec
        - rails
        - s
        image: gcr.io/iron-dynamics-242723/11-app
        imagePullPolicy: Always
        name: koujou11-app
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
