11_gcloud/.kubernetes/koujou11-mysql.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: koujou11-mysql
  name: koujou11-mysql
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: koujou11-mysql
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: koujou11-mysql
    spec:
      containers:
      - args:
        - --default-authentication-plugin=mysql_native_password
        image: mysql:5.7
        imagePullPolicy: Always
        name: koujou11-mysql
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
          subPath: mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-volumeclaim
