11_gcloud/.kubernetes/koujou11-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: koujou11-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: koujou11-app
          servicePort: 3080
